# AI-SERVER

./: Cargo.toml
src/: data_base.rs  lms.rs  main.rs  tools.rs  ws_server.rs
web/: app.js  index.html  styles.css
