[package]
name = "chat-IBM"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebSocket and HTTP server
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs"] }

# Streaming utilities
futures-util = "0.3"

# Regex for parsing
regex = "1.10"
# for sql stuff
mysql = "24.0"